packages/yew-router-macro/tests/routable_derive/route-with-hash-fail.rs
#[derive(yew_router::Routable)]
enum Routes {
    #[at("/#/one")]
    One,
}

fn main() {}
